# uipath-orchestrator-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test.py
uipath_orchestrator_mcp/: __init__.py  api.py  server.py
