[project]
name = "uipath-orchestrator-mcp"
version = "0.1.0"
description = "MCP server for UiPath Orchestrator"
authors = [
    {name = "Adam Stuber", email = "adamstuber@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "mcp[cli] (>=1.0.0)",
    "requests (>=2.32.0)",
    "python-dotenv (>=1.0.0)",
    "python-dateutil (>=2.9.0)",
    "fastmcp (>=3.1.1,<4.0.0)",
]

[project.scripts]
uipath-orchestrator-mcp = "uipath_orchestrator_mcp.server:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "uipath_orchestrator_mcp"}]
